--- a/resources/sass/components/_search.scss
+++ b/resources/sass/components/_search.scss
@@ -1,31 +1,22 @@
 $primary-color: #000;
 $secondary-color: #318ce7;
 
-.header__nav-search-container {
-    width: 50%;
+.search-wrapper {
+    width: 100%;
 
-    .header__nav-search-wrapper {
-        justify-content: center;
-    }
-}
-
-.header__nav-search-wrapper {
-    width: 500px;
-    margin: 38px auto;
-
-    .header__nav-search-bar {
+    .search-bar {
         position: relative;
         width: 350px;
         height: 40px;
 
         .search-term,
-        .header__nav-search-btn {
+        .search-btn {
             top: 0;
             height: 100%;
             border: none;
         }
 
-        .header__nav-search-btn,
+        .search-btn,
         .search-icon {
             position: absolute;
         }
@@ -40,7 +31,7 @@ $secondary-color: #318ce7;
             border: 2px solid $primary-color;
         }
 
-        .header__nav-search-btn {
+        .search-btn {
             right: 0;
             width: 40px;
             background: $primary-color;
@@ -58,7 +49,7 @@ $secondary-color: #318ce7;
             }
         }
 
-        .header__nav-search-btn:hover {
+        .search-btn:hover {
             background: $secondary-color;
         }
     }
