Change social icons to flex items and add sufficient gaps in between icons

--- a/resources/sass/pages/_about.scss
+++ b/resources/sass/pages/_about.scss
@@ -89,10 +89,13 @@
 
         .social {
             margin-top: 15px;
+            justify-content: center;
+            gap: 20px;
 
             a {
                 color: #919191;
                 transition: 0.3s;
+                text-decoration: none;
             }
         }
     }
