Update scss for login and register pages

--- a/resources/sass/pages/_register.scss
+++ b/resources/sass/pages/_register.scss
@@ -54,7 +54,7 @@
             outline: none;
 
             &:focus::placeholder {
-                color: transparent;
+                visibility: hidden;
             }
         }
     }
