--- a/resources/sass/pages/_login.scss
+++ b/resources/sass/pages/_login.scss
@@ -53,7 +53,7 @@
             outline: none;
 
             &:focus::placeholder {
-                color: transparent;
+                visibility: hidden;
             }
         }
     }
